Fixed map height issue on mobile

--- a/css/application.css
+++ b/css/application.css
@@ -88,15 +88,14 @@ nav {
       margin: 0;
       color: #404040; }
   .content.map-part {
-    margin-top: 100px;
-    height: 900px; }
+    margin-top: 100px;}
     .content.map-part h1 {
       text-align: center;
       font-size: 4em; }
     .content.map-part img {
       width: 100%; }
   .content.price-list {
-    margin-top: 100px; }
+    margin-top: 30px; }
     .content.price-list h1 {
       text-align: center;
       font-size: 4em; }
